2008-05-29  Matthias Clasen <mclasen@redhat.com>

	* === Released 2.13.1 ===

2008-05-29  Matthias Clasen  <mclasen@redhat.com>

	Bug 535453 - gdk_pixbuf_format_get_license returns NULL for 
	any of the loaders

	* queryloaders.c (write_loader_info): Add the license info
	after the description.

	* gdk-pixbuf-io.c (gdk_pixbuf_io_init): Read the license info
	from the module file. Reported by Andrey Tsyvarev.

2008-05-28  Michael Natterer  <mitch@imendio.com>

	* gdk-pixbuf.h: define GDK_PIXBUF_H_INSIDE around including all
	other headers.

	* gdk-pixbuf-animation.h
	* gdk-pixbuf-core.h
	* gdk-pixbuf-enum-types.h.template
	* gdk-pixbuf-features.h.in
	* gdk-pixbuf-io.h
	* gdk-pixbuf-loader.h
	* gdk-pixbuf-simple-anim.h
	* gdk-pixbuf-transform.h: add single-include guards that #error
	out if GDK_PIXBUF_DISABLE_SINGLE_INCLUDES is defined and any of
	these files is included individually.

	* gdk-pixbuf-private.h: don't incude "gdk-pixbuf-io.h".

	* gdk-pixbuf-csource.c: #define __GTK_H_INSIDE__ around including
	"../gtk/gtkversion.h". Ugly but needed in this special case.

2008-05-27  Tor Lillqvist  <tml@novell.com>

	* io-*.c: Use explicit G_MODULE_EXPORT decoration when building
	the loader in question as a module.

	* gdk-pixbuf-io.c: Enable included build of the icns and jasper
	loaders.

2008-05-27  Michael Natterer  <mitch@imendio.com>

	* gdk-pixbuf.c: put back the #define, but call it
	GDK_PIXBUF_C_COMPILATION.

	* gdk-pixbuf-features.h.in: make variable export depend on that
	define instead of GDK_PIXBUF_COMPILATION.

2008-05-27  Michael Natterer  <mitch@imendio.com>

	Fix and simplify definition of GDK_PIXBUF_VAR:

	* Makefile.am: add -DGDK_PIXBUF_COMPILATION to INCLUDES.

	* gdk-pixbuf.c: don't #define it here. Remove GDK_PIXBUF_VAR from
	the definition of the version variables.

	* gdk-pixbuf-features.h.in: in the !G_PLATFORM_WIN32 case, always
	define GDK_PIXBUF_VAR to "extern". Remove redundant #ifndef